--- a/GraphicsProject.cbp
+++ b/GraphicsProject.cbp
@@ -7,8 +7,8 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin\Debug\GraphicsProject" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj\Debug\" />
+				<Option output="bin/Debug/GraphicsProject" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
@@ -16,8 +16,8 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin\Release\GraphicsProject" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj\Release\" />
+				<Option output="bin/Release/GraphicsProject" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
@@ -33,14 +33,35 @@
 			<Add directory="include" />
 		</Compiler>
 		<Linker>
-			<Add library="lib\libgraphics.a" />
-			<Add library="lib\libgraphicsd.a" />
-			<Add library="lib\libsdl_ttf.a" />
-			<Add library="lib\libSDL.dll.a" />
-			<Add library="lib\libSDLmain.a" />
+			<Add library="lib/libgraphics.a" />
+			<Add library="lib/libgraphicsd.a" />
+			<Add library="lib/libsdl_ttf.a" />
+			<Add library="lib/libSDL.dll.a" />
+			<Add library="lib/libSDLmain.a" />
 			<Add directory="lib" />
 		</Linker>
+		<Unit filename="amobaapplication.hpp" />
+		<Unit filename="clickButton.cpp" />
+		<Unit filename="clickButton.hpp" />
+		<Unit filename="jatekmester.cpp" />
+		<Unit filename="jatekmester.hpp" />
 		<Unit filename="main.cpp" />
+		<Unit filename="menuwindow.cpp" />
+		<Unit filename="menuwindow.hpp" />
+		<Unit filename="palya.cpp" />
+		<Unit filename="palya.hpp" />
+		<Unit filename="playwindow.cpp" />
+		<Unit filename="playwindow.hpp" />
+		<Unit filename="resultwindow.cpp" />
+		<Unit filename="resultwindow.hpp" />
+		<Unit filename="statictext.cpp" />
+		<Unit filename="statictext.hpp" />
+		<Unit filename="texteditor.cpp" />
+		<Unit filename="texteditor.hpp" />
+		<Unit filename="widgets.cpp" />
+		<Unit filename="widgets.hpp" />
+		<Unit filename="window.cpp" />
+		<Unit filename="window.hpp" />
 		<Extensions>
 			<code_completion />
 			<debugger />
